--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
+*{
+  margin:0px;
+  padding:0px;
+}
+.product-container{
   text-align: center;
+  height:35px;
+  width: 100%;
+  background-color: rgb(48, 47, 47);
+  color: white;
+  padding:2px;
+  margin:2px
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.product-container:hover{
+  background-color: black;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.song-name{
+  cursor: pointer;;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-min{
+  position:fixed;
+  bottom:0px;
+  width: 100%;
+}
+.player-card{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-evenly;
+  left:45%;
+  height:60vh;
+  width: 95%;
+  background-color: black;
+  border-radius:20px;
+  margin:auto;
+  margin-top:10px;
+  box-shadow: 1px 1px 10px 5px rgb(1, 1, 97);
+
+}
+.player-card i{
+  color: rgb(129, 76, 2);
+  font-size:40px;
+  margin:5px;
+}
+.player-card i:hover{
+  color: rgb(249, 146, 1);
+}
+.song-name{
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Artist-name{
+  color: white;
 }
